# drow

./: MANIFEST.in  README.md  pyproject.toml
.github/workflows/: flake8.yml  publish.yml  type-check.yml  unittest.yml
drow/: annotation.py  converter.py  model.py  parser.py  query.py
tests/: test_converter.py  test_parser.py  test_query.py
