[project]
name = "drow"
description = "data model for Prometheus Query Language"

authors = [
    { name = "Elephant Liu" }
]

license = "MIT"

classifiers = [
  "Programming Language :: Python :: 3",
]

requires-python = ">=3.10"

readme = "README.md"

dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/xospc/drow"

[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
